[gd_scene load_steps=7 format=2]

[ext_resource path="res://screens/bear-village/bevil-room/background.png" type="Texture" id=1]
[ext_resource path="res://screens/bear-village/bevil-room-game.gd" type="Script" id=2]
[ext_resource path="res://common/ui/playerAndControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/moving-fighters/bee.tscn" type="PackedScene" id=5]
[ext_resource path="res://screens/bear-village/images/hive1.png" type="Texture" id=6]

[sub_resource type="TileSet" id=1]
0/name = "background.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="bee-room" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 96, 96 )
format = 1
tile_data = PoolIntArray( -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0 )

[node name="cameraRef" type="ReferenceRect" parent="."]
margin_left = -94.0
margin_top = -192.0
margin_right = 476.0
margin_bottom = 286.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bee" parent="." instance=ExtResource( 5 )]
position = Vector2( 294.055, 17.0703 )

[node name="bee2" parent="." instance=ExtResource( 5 )]
position = Vector2( 230.85, -47.2055 )

[node name="bee3" parent="." instance=ExtResource( 5 )]
position = Vector2( 336.379, -48.7353 )

[node name="bee4" parent="." instance=ExtResource( 5 )]
position = Vector2( 331.612, 7.41615 )

[node name="bee5" parent="." instance=ExtResource( 5 )]
position = Vector2( 248.974, 0.529747 )

[node name="bee6" parent="." instance=ExtResource( 5 )]
position = Vector2( 266.455, -86.8759 )

[node name="bee7" parent="." instance=ExtResource( 5 )]
position = Vector2( 309.363, -83.1678 )

[node name="bee8" parent="." instance=ExtResource( 5 )]
position = Vector2( 189.363, -95.1678 )

[node name="bee9" parent="." instance=ExtResource( 5 )]
position = Vector2( 284.363, 55.8322 )

[node name="bee10" parent="." instance=ExtResource( 5 )]
position = Vector2( 236.363, 36.8322 )

[node name="bee11" parent="." instance=ExtResource( 5 )]
position = Vector2( 201.363, -1.16778 )

[node name="bee12" parent="." instance=ExtResource( 5 )]
position = Vector2( 182.363, -57.1678 )

[node name="bee13" parent="." instance=ExtResource( 5 )]
position = Vector2( 226.363, -88.1678 )

[node name="bee14" parent="." instance=ExtResource( 5 )]
position = Vector2( 331.363, 60.8322 )

[node name="hive1" type="Sprite" parent="."]
position = Vector2( 302.585, -41.1627 )
texture = ExtResource( 6 )

[node name="playerAndControl" parent="." instance=ExtResource( 3 )]

[connection signal="damagedBy" from="playerAndControl" to="." method="_on_playerAndControl_damagedBy"]
[connection signal="hit" from="playerAndControl" to="." method="_on_playerAndControl_hit"]
